Update and rename scripts.html to _includes/scripts.html

--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,7 +1,7 @@
 <script type="text/javascript">
 // Scrambled email
 const emaillink = document.querySelector('a[title="my email"]')
-emaillink.setAttribute('href', 'mailto:' + 'me' + '@' + 'daviddarnes' + '.' + 'com')
+emaillink.setAttribute('href', 'mailto:' + 'me' + '@' + 'roachhd' + '.' + 'com')
 
 // Keyline colouring
 const items = document.querySelectorAll('.item--site')
